--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -43,6 +43,39 @@ header i {
     font-size: 1.6em;
     cursor: pointer;
 }
+.container-menu{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 70vh;
+    width: 100%;
+    padding: 20px;
+    background-color: #291379;
+    border-top: 3px solid #FFC100;
+    padding-bottom: 100px;
+}
+.container-menu img{
+    width: 150px;
+}
+.container-menu nav{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin-left: 20px;
+}
+.container-menu a{
+    text-decoration: none;
+    color: #FFC100;
+    font-family: var(--font-logo);
+    font-size: 19px;
+    text-shadow: 0px 0px 1px #FFC100;
+    transition: .5s;
+}
+.container-menu a:hover{
+    color: var(--cor-03);
+}
+
 .beggin{
     height: 56vh;
     background-image: url(../imagens/portrait-background-image.jpg);
@@ -102,6 +135,7 @@ header i {
     border: 2px solid var(--cor-03);
     border-radius: 4px;
 }
+
 .top{
     margin-bottom: 5px;
     text-align: center;
