--- a/estilos/media-queries.css
+++ b/estilos/media-queries.css
@@ -15,6 +15,8 @@
         padding: 10px 30px;
         display: flex;
         justify-content: space-between;
+        position: sticky;
+        top: 0;
     }
     header img{
         display: flex;
@@ -63,6 +65,8 @@
         padding: 10 30px;
         display: flex;
         justify-content: space-between;
+        position: sticky;
+        top: 0;
     }
     header img{
         display: flex;
@@ -112,6 +116,8 @@
         padding: 0 30px;
         display: flex;
         justify-content: space-between;
+        position: sticky;
+        top: 0;
     }
     header img{
         display: flex;
